chore: remove build artifacts and pycache from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,18 @@ ENV/
 # Python cache
 __pycache__/
 *.py[cod]
+*$py.class
 
 # AWS credentials
 .aws/credentials
 .aws/config
 .aws
+
+# Distribution / Build
+awsctl.egg-info/
+.eggs/
+build/
+dist/
 
 .vscode
 awsctl.egg-info
